--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,82 @@
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
+
+# Firebase config
+/backend/config/key.json
+/backend/config/serviceAccountKey.json
+firebase-config.js
+**/firebase-config.*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.env/
+.venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# Build / Production
+/dist
+/build
+/out
+
+# Testing
+/coverage
+
+# Cache
+.cache/
+.pytest_cache/
+.eslintcache
+
+# Local SSL certificates
+*.pem
+*.key
+*.crt
+
+# Sensitive data
+**/credentials.*
+**/secrets.*
+**/private.*
+**/key.*
+**/*secret*
+**/*password*
+**/*credential*
+**/*private*
+**/*key*
+
+# Temporary files
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -7,7 +86,6 @@ __pycache__/
 *.so
 
 # Distribution / packaging
-.Python
 build/
 develop-eggs/
 dist/
@@ -56,7 +134,6 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -126,15 +203,6 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
