--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "momentum-frontend",
-  "version": "0.1.0",
+  "name": "momentum",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vuex": "^4.1.0",
-    "axios": "^1.4.0",
-    "chart.js": "^4.3.3",
-    "vue-chartjs": "^5.2.0",
-    "@heroicons/vue": "^2.0.18",
-    "@tailwindcss/forms": "^0.5.4"
+    "axios": "^1.6.7",
+    "firebase": "^10.8.0",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-vue": "^5.0.3",
+    "vite": "^5.0.11"
   }
 }
