--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,6 @@
-flask==3.0.0
-python-dotenv==1.0.0
-flask-cors==4.0.0
-firebase-admin==6.4.0 
+flask==2.0.1
+werkzeug==2.0.3
+flask-cors==3.0.10
+python-dotenv==0.19.0
+firebase-admin==5.0.0
+schedule==1.1.0 
