--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
