--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "firebase": "^10.8.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "pinia": "^3.0.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
